# lilo-finance-manager

./: .pre-commit-config.yaml  README.md  contracts.md  go.work  go.work.sum  plan.md
.github/workflows/: build.yaml  e2e_test.yaml  integration_test.yaml  unit_test.yaml
deploy/application/: postgres-values.yaml
deploy/application/helm/: Chart.yaml  values.yaml
deploy/application/helm/templates/: _helpers.tpl  deployments.yaml  services.yaml
deploy/application/istio/: destinationrules.yaml  egress.yaml  ingress.yaml  routing.yaml
deploy/infrastructure/: Makefile  terraform.tfstate
deploy/infrastructure/ansible/: hosts.yaml  playbook.yaml  variables.yaml
deploy/infrastructure/terraform/: .gitignore
deploy/infrastructure/terraform/env/Dev/: .terraform.lock.hcl  configure.bash  main.tf
src/account_management/: go.mod
src/account_management/models/: account_test.go
src/category_management/: Makefile  compose.yaml  go.mod  go.sum  main.go  main_e2e_test.go
src/category_management/controllers/: category_controller.go  category_controller_integration_test.go  category_controller_test.go  dtos.go  dtos_test.go
src/category_management/custom_errors/: errors.go  errors_test.go
src/category_management/database/: db.go  db_test.go
src/category_management/messenger/: publisher.go
src/category_management/middlewares/: authorization.go  authorization_test.go  conditions.go  conditions_test.go
src/category_management/models/: category.go  category_test.go
src/category_management/router/: router.go  router_integration_test.go
src/common_utils/go/messaging/: Dockerfile  Makefile  compose.yaml  go.mod
src/common_utils/go/messaging/kafka/: messaging_test.go  messenger.go  messenging_test.go
src/common_utils/go/serialization/: Makefile  dtos.go  go.mod  serialization.go  serialization_test.go
src/common_utils/go/serialization/http_serialization/: dtos.go  serialization.go  serialization_test.go
src/common_utils/go_serialization/: go.mod
src/common_utils/go_serialization/serialization/: dtos.go  serialization.go
src/common_utils/messagery/: pyproject.toml
src/common_utils/messagery/src/: kafka_services.py
src/common_utils/messagery/test/: test_kafka_integration.py  test_kafka_unit.py
src/common_utils/python/messagery/: Makefile
src/transaction_management/: Makefile  pyproject.toml
src/transaction_management/setup/: settings.py  urls.py
src/transaction_management/transaction_manager/tests/unit/: test_transaction_model.py
src/user_management/: Dockerfile  Makefile  compose.yaml  pyproject.toml
src/user_management/app/: app.py  config.py
src/user_management/app/models/: base.py  errors.py  user.py
src/user_management/app/routes/: auth.py  dependencies.py  users.py
src/user_management/app/services/: auth_service.py
src/user_management/test/: test_app.py
src/user_management/test/e2e/: test_e2e_user_management.py
src/user_management/test/integration/: test_auth_router.py  test_user_router.py
src/user_management/test/unit/: test_app.py  test_auth_service.py  test_base_model.py  test_dependencies.py  test_user_model.py
