[project]
name = "lilo-finance-transactions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
]


[tool.ruff]
line-length = 79
preview = true

[tool.ruff.lint]
select = ["UP", "F", "W", "E", "I"]

[tool.ruff.format]
quote-style="single"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.13"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]
