[project]
name = "melo-finance-users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]

test = []

[tool.ruff]
line-length = 79
preview = true

[tool.ruff.lint]
select = ["UP", "F", "W", "E", "I"]

[tool.ruff.format]
quote-style="single"

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src"]
python_version = "3.13"
