[project]
name = "melo-finance-users"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=25.4.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
telemetry = [
    "opentelemetry-distro>=0.53b1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "pip>=25.0.1",
]

test = [
    "testcontainers[postgres]>=4.10.0",
]

[tool.ruff]
line-length = 79
preview = true

[tool.ruff.lint]
select = ["UP", "F", "W", "E", "I"]

[tool.ruff.format]
quote-style="single"

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src"]
python_version = "3.13"
